# nvidia_scale_build_ci

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE.bazel
api/: BUILD  inference.proto
build_defs/: BUILD  secure_cc.bzl
ci/: BUILD
libs/core/: BUILD  tensor.cc  tensor.h
libs/crypto/: BUILD  hash.cc  hash.h
libs/ffi/: BUILD  clib.c  clib.h
re/: buildbuddy.yaml  docker-compose.yml
services/infer/: BUILD  main.cc
tests/fuzz/: BUILD  fuzz_core.cc
tests/unit/: BUILD  core_test.cc
toolchains/: BUILD
